--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/study?useSSL=false&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/study?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
