--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,3 +1,5 @@
+server.port=9090
+
 spring.datasource.url=jdbc:mysql://localhost:3306/study?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=1234
