--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,8 +1,8 @@
 server.port=9090
 
-spring.datasource.url=jdbc:mysql://localhost:3306/study?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://kjm.cgzdkncilken.ap-northeast-2.rds.amazonaws.com:3306/study?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=yoobin
+spring.datasource.password=rlaemf132#
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
